Retrieving feedback modules via CS 3, added test template WIP